css overlap fixes

--- a/src/views/Todo.css
+++ b/src/views/Todo.css
@@ -1,16 +1,7 @@
-
-button,
-input {
+ button {
   overflow: visible;
 }
-input {
-  width: 10%;
-}
-body {
-    width: 100%;
-    margin: 0 auto;
-    color: white;
-  }
+
 .form-group > input[type="text"] {
     display: inline-block;
     margin-top: 0.4rem;
@@ -97,6 +88,7 @@ body {
   border: 10px solid white;
   border-radius: 2px;
   padding: 2%;
+  color: white;
 }
 
 
@@ -160,7 +152,6 @@ body {
     margin: unset auto;
     margin-top: 8%;
   }
-  /* Todo item styles */
   .todo {
     display: flex;
     flex-direction: row;
@@ -178,7 +169,7 @@ body {
   .todo-text:focus {
     box-shadow: inset 0 0 0 2px;
   }
-  /* CHECKBOX STYLES */
+
   .c-cb {
     box-sizing: border-box;
     font-family: Arial, sans-serif;
@@ -246,3 +237,4 @@ body {
   .c-cb > input[type="checkbox"]:checked + label::after {
     opacity: 1;
   }
+
